# wgpu-learn

./: .gitignore  .gitmodules  1.sh  Cargo.toml  README.md  init.js  main.ts
examples/adapter_get_info/: main.rs
examples/helloTriangle/: main.rs  shader.vert
examples/helloTriangleMSAA/: main.rs  shader.frag
examples/projection_camera/: main.rs
examples/rectangle_texture/: main.rs  shader.frag  shader.vert
src/: app.rs  attribute.json  config.rs  lib.rs  main.rs  other.rs  trait_help.rs  uniform.json  util.rs
src/core/: color.rs  event.rs  index_buffer.rs  mod.rs  shader.rs  shader_var.rs  vertex.rs  vertex_buffer.rs  vertex_format.rs
src/core/shaders/: base.frag  base.vert  mod.rs  pbr.frag  pbr.vert
src/ecs/: component.rs  entity.rs  mod.rs  system.rs
src/ecs/components/: camera.rs  light.rs  mesh.rs
src/model/: create_mesh.rs  drawable.rs  mesh.rs  mod.rs  model.rs
src/model/material/: base_material.rs  mod.rs
src/model/material/texture/: mod.rs
src/scene/: camera.rs  light.rs  mod.rs  node.rs  scene.rs
src/shaders/: base.frag  base.vert  helloTriangle.frag  helloTriangle.vert  mod.rs
web/: index.html  package.json  tsconfig.compiler.json  tsconfig.json  tslint.json  webpack.config.js
web/ts/: glslang.ts  index.ts
web/typings/: index.d.ts
