[package]
name = "wgpu-learn"
version = "0.1.0"
authors = ["liaodonghuo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
cgmath = "0.17"
log = "0.4"
png = "0.15"
zerocopy = "0.2"
futures = "0.3"
lazy_static = "1.4.0"
winit = { version = "0.22.1", features = ["web-sys"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
handlebars = "3.0.1"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.5.0"
env_logger = "0.7"
glsl-to-spirv = "0.1.7"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen" }
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen" }

[dependencies.wgpu]
package = "wgpu"
git = "https://github.com/gfx-rs/wgpu-rs.git"
rev = "49640d2497ffac1936feb1cebb0ef64a39c31dce"

[package.metadata.commands]
start = "RUST_LOG=info cargo run --bin main4"
dbg = "cargo run --bin main5"
wasm = "RUSTFLAGS=--cfg=web_sys_unstable_apis cargo build --target wasm32-unknown-unknown --bin main"